feature: adds account orders

--- a/src/account-cashback.html
+++ b/src/account-cashback.html
@@ -2,13 +2,12 @@
 
 <body class="account account--cashback">
   <!-- //= components/header.html -->
-  <div
-    class="account__wrapper uk-container bg-full-width--gradient">
+  <div class="account__wrapper uk-container bg-full-width--gradient">
     <div class="frame uk-flex uk-flex-column-reverse@s">
 
       <div class="uk-width-expand@l">
         <h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
-        <ul class="account__list uk-flex uk-flex-between">
+        <ul class="account__list uk-flex uk-flex-between@l">
           <li>
             <a href="#">Главная</a>
           </li>
@@ -21,7 +20,7 @@
           <li class="active">
             <a href="#">Кешбэк</a>
           </li>
-          <li class="uk-visible@l">
+          <li>
             <a href="#">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
           </li>
           <li class="uk-visible@l">
@@ -43,7 +42,8 @@
               <div class="uk-flex uk-flex-column">
                 <div class="uk-margin-small-bottom uk-flex uk-flex-between">
                   <span class="account__cashback-subtitle">Вывод&nbsp;5065&nbsp;&#8381;</span>
-                  <span class="account__order-status account__order-status--process uk-width-1-6@l">Заказ <br>обрабатывается</span>
+                  <span class="account__order-status account__order-status--process uk-width-1-6@l">Заказ
+                    <br>обрабатывается</span>
                 </div>
                 <span class="account__date">29 сентября 2019</span>
               </div>
