--- a/src/account-main.html
+++ b/src/account-main.html
@@ -2,13 +2,12 @@
 
 <body class="account account--main">
   <!-- //= components/header.html -->
-  <div
-    class="account__wrapper uk-container bg-full-width--gradient">
+  <div class="account__wrapper uk-container bg-full-width--gradient">
     <div class="frame uk-flex uk-flex-column-reverse@s">
 
       <div class="uk-width-expand@l">
         <h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
-        <ul class="account__list uk-flex uk-flex-between">
+        <ul class="account__list uk-flex uk-flex-between@l">
           <li class="active">
             <a href="#">Главная</a>
           </li>
@@ -18,17 +17,17 @@
           <li>
             <a href="#">Заказы</a>
           </li>
-          <li class="uk-visible@l">
+          <li>
             <a href="#">Кешбэк</a>
           </li>
           <li>
             <a href="#">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
           </li>
           <li class="uk-visible@l">
-            <a class="account__logout" href="#">Выйти
-              <svg width="20" height="20" fill="#FF548C">
-                <use xlink:href="img/symbol/sprite.svg#log-out" />
-              </svg>
+            <a class=" account__logout" href="#">Выйти
+            <svg width="20" height="20" fill="#FF548C">
+              <use xlink:href="img/symbol/sprite.svg#log-out" />
+            </svg>
             </a>
           </li>
         </ul>
