feature: adds slider and mobile version

--- a/src/product.html
+++ b/src/product.html
@@ -4,8 +4,8 @@
   <!-- //= components/header.html -->
   <div
     class="product__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
-    <div class="frame uk-flex uk-flex-between@l">
-      <div class="uk-flex uk-flex-column uk-width-expand">
+    <div class="frame uk-flex uk-flex-column@s uk-flex-between@l">
+      <div class="product__content uk-flex uk-flex-column uk-width-expand">
         <div class="product__header uk-flex uk-flex-column">
           <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
             <li><a href="#">Главная</a></li>
@@ -15,69 +15,74 @@
 
           <h1 class="title title--medium">Смартфон iPhone 11 256GB Green</h1>
 
-          <div class="uk-flex uk-flex-middle">
-            <span class="product__status product__status--preorder uk-margin-right">Предзаказ</span>
-            <span class="product__vendor-code">Код: 3014117 </span>
-            <ul class="product__rating uk-flex uk-flex-middle uk-margin-right">
-              <li>
-                <svg width="18" height="17" fill="#FF548C">
-                  <use xlink:href="img/symbol/sprite.svg#star" />
-                </svg>
-              </li>
-              <li>
-                <svg width="18" height="17" fill="#FF548C">
-                  <use xlink:href="img/symbol/sprite.svg#star" />
-                </svg>
-              </li>
-              <li>
-                <svg width="18" height="17" fill="#FF548C">
-                  <use xlink:href="img/symbol/sprite.svg#star" />
-                </svg>
-              </li>
-              <li>
-                <svg width="18" height="17" fill="#FF548C">
-                  <use xlink:href="img/symbol/sprite.svg#star" />
-                </svg>
-              </li>
-              <li>
-                <svg width="18" height="17" fill="#DEDEDE">
-                  <use xlink:href="img/symbol/sprite.svg#star" />
-                </svg>
-              </li>
-            </ul>
-            <a class="product__link" href="#">1 отзыв</a>
+          <div class="uk-flex uk-flex-column@s uk-flex-middle@l">
+            <span
+              class="product__status product__status--preorder uk-margin-right@l uk-margin-small-bottom@s">Предзаказ</span>
+            <div class="uk-flex uk-flex-middle">
+              <span class="product__vendor-code">Код: 3014117 </span>
+              <ul class="product__rating uk-flex uk-flex-middle uk-margin-right">
+                <li>
+                  <svg width="18" height="17" fill="#FF548C">
+                    <use xlink:href="img/symbol/sprite.svg#star" />
+                  </svg>
+                </li>
+                <li>
+                  <svg width="18" height="17" fill="#FF548C">
+                    <use xlink:href="img/symbol/sprite.svg#star" />
+                  </svg>
+                </li>
+                <li>
+                  <svg width="18" height="17" fill="#FF548C">
+                    <use xlink:href="img/symbol/sprite.svg#star" />
+                  </svg>
+                </li>
+                <li>
+                  <svg width="18" height="17" fill="#FF548C">
+                    <use xlink:href="img/symbol/sprite.svg#star" />
+                  </svg>
+                </li>
+                <li>
+                  <svg width="18" height="17" fill="#DEDEDE">
+                    <use xlink:href="img/symbol/sprite.svg#star" />
+                  </svg>
+                </li>
+              </ul>
+              <a class="product__link" href="#">1 отзыв</a>
+            </div>
           </div>
         </div>
 
-        <div class="uk-flex">
-          <div class="product__gallery uk-width-expand uk-flex">
-
-            <!-- Swiper -->
-            <div class="swiper-container gallery-thumbs">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
-                <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
-                <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
-              </div>
-              <!-- Add Arrows -->
-              <!-- <div class="swiper-button-next"></div>
+        <div class="uk-flex uk-flex-column@s">
+          <div class="product__gallery-wrap uk-width-expand uk-flex uk-flex-column">
+            <div class="product__gallery uk-flex">
+              <!-- Swiper -->
+              <div class="swiper-container gallery-thumbs">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
+                </div>
+                <!-- Add Arrows -->
+                <!-- <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div> -->
-            </div>
+              </div>
 
-            <div class="swiper-container gallery-top">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background:url(./img/temp/product-gallery.jpg)"></div>
-                <div class="swiper-slide" style="background:url(./img/temp/product-card-1.jpg)"></div>
-                <div class="swiper-slide" style="background:url(./img/temp/product-card-2.jpg)"></div>
+              <div class="swiper-container gallery-top">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-card-1.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-card-2.jpg)"></div>
+                </div>
               </div>
             </div>
+            <span class="product__points uk-visible@l">+ 95 балов на бонусный счет</span>
           </div>
 
           <div class="product__frame">
-            <div class="product__container uk-flex uk-child-width-1-2@l">
-              <div class="uk-flex uk-flex-column">
+            <div class="product__container uk-flex uk-flex-column@s uk-child-width-1-2@l">
+              <div class="uk-flex uk-flex-column uk-margin-bottom@s">
                 <span class="checkout__container-title">Объем памяти</span>
-                <ul class="filter__memory uk-flex uk-flex-wrap uk-flex-middle">
+                <ul class="filter__memory uk-flex uk-flex-wrap uk-flex-middle uk-child-width-auto uk-child-width-1-3@s">
                   <li>
                     <input class="uk-hidden" type="radio" id="m1" name="m1">
                     <label for="m1">64 Gb</label>
@@ -93,7 +98,7 @@
                 </ul>
               </div>
 
-              <div class="uk-flex uk-flex-column uk-margin-left">
+              <div class="uk-flex uk-flex-column uk-margin-left@l">
                 <span class="checkout__container-title">Цвет корпуса</span>
                 <select>
                   <option data-image="img/pic/ico/circle-gold.svg" value="8">Золотой</option>
@@ -125,30 +130,39 @@
 
             <div class="product__container">
               <span class="product__container-title uk-margin-small-bottom"><span>Купить</span> в 1 клик</span>
-              <div class="uk-flex uk-flex-between uk-margin-bottom">
-                <input class="product__container-input" type="text" placeholder="Введите номер телефона">
+              <div class="uk-flex uk-flex-between uk-flex-column@s uk-margin-bottom">
+                <input class="product__container-input uk-margin-bottom@s" type="text"
+                  placeholder="Введите номер телефона">
                 <button class="btn product__container-btn" type="button">Купить</button>
               </div>
-              <button class="btn product__container-btn-checkout" type="btn">
+              <button class="btn product__container-btn--pink" type="btn">
                 <span>
                   <svg width="24" height="24" fill="#ffffff">
                     <use xlink:href="img/symbol/sprite.svg#cart-icon" />
                   </svg>
-                  добавить в корзину</span>
+                  Добавить в корзину</span>
+              </button>
+
+              <button class="btn product__container-btn--blue uk-margin-top uk-hidden" type="btn">
+                <span>
+                  <svg width="24" height="24" fill="#ffffff">
+                    <use xlink:href="img/symbol/sprite.svg#cart-icon" />
+                  </svg>
+                  Оформить предзаказ</span>
               </button>
             </div>
 
             <div class="product__container uk-text-center@l">
-              <span class="product__container-title uk-margin-bottom">Выберите 2 подарка</span>
-              <ul class="product__present uk-flex uk-flex-between">
-                <li class="checked">
+              <span class="product__container-title uk-margin-bottom uk-padding-left@s">Выберите 2 подарка</span>
+              <ul class="product__present uk-flex">
+                <li class="checked uk-margin-right">
                   <div>
                     <span class="uk-margin-top uk-padding-small-top@l uk-padding-small-top@s">Чехол</span>
                     <img src="img/temp/product-present-1.jpg" width="110" height="70" alt="">
                   </div>
                 </li>
 
-                <li>
+                <li class="uk-margin-right">
                   <div>
                     <span class="uk-margin-top uk-padding-small-top@l uk-padding-small-top@s">Скидка</span>
                     <img src="img/temp/product-present-2.jpg" width="68" height="60" alt="">
@@ -170,7 +184,7 @@
       <div class="product__section">
         <button class="btn" type="button">Задать вопрос онлайн</button>
 
-        <ul class="feature uk-flex uk-flex-column">
+        <ul class="feature uk-flex uk-flex-column@l">
           <li class="feature--green uk-flex">
             <div class="uk-margin-right">
               <svg width="54" height="34" fill="#ffffff">
