feature: adds new banners

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,23 @@
           <a href="#" class="btn">Подробнее</a>
         </li>
         <li class="swiper-slide slide-2">
-          <p>Slide - 2</p>
+          <p>AirPods Pro Просто вошлебно. Как никогда.</p>
+          <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
         </li>
         <li class="swiper-slide slide-3">
-          <p>Slide - 3</p>
+          <p>Apple Watch Series 5</p>
+          <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
+          <a href="#" class="btn">Подробнее</a>
+        </li>
+        <li class="swiper-slide slide-4">
+          <p>Новый iPad от 19 900 &#8381;</p>
+          <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
+          <a href="#" class="btn">Подробнее</a>
+        </li>
+        <li class="swiper-slide slide-5">
+          <p> Новый iPhone 11 всех цветов в наличии</p>
+          <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
         </li>
       </ul>
