feature: adds new popups

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -262,19 +262,22 @@
           <div class="checkout__delivery">
             <span class="checkout__subtitle uk-margin-small-bottom">Доставка</span>
             <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
-              <li class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
                 </div>
                 <span>CDEK</span>
               </li>
-              <li class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
                 </div>
                 <span>Почта России EMS</span>
               </li>
-              <li class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+              <li
+                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/ico/pick-up-ico.svg" width="45" height="48" alt="">
                 </div>
@@ -286,20 +289,24 @@
 
           <div class="checkout__payment">
             <span class="checkout__subtitle uk-margin-small-bottom">Оплата</span>
-            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l" uk-height-match="target: div">
-              <li class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l"
+              uk-height-match="target: div">
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div class="uk-flex uk-flex-middle">
                   <img src="img/pic/ico/checkout-pay-1.svg" width="38" height="60" alt="">
                 </div>
                 <span>При получении <br><span>(Наложенный платеж)</span></span>
               </li>
-              <li class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div class="uk-flex uk-flex-middle">
                   <img src="img/pic/ico/checkout-pay-2.svg" width="60" height="40" alt="">
                 </div>
                 <span>Картой Visa, MC, Мир <br><span>(При получении)</span></span>
               </li>
-              <li class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s">
+              <li
+                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div class="uk-flex uk-flex-middle">
                   <img src="img/pic/ico/checkout-pay-3.svg" width="50" height="50" alt="">
                 </div>
