--- a/src/index.html
+++ b/src/index.html
@@ -59,11 +59,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -84,11 +84,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -109,11 +109,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -134,11 +134,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -159,11 +159,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -184,11 +184,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -209,11 +209,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -234,11 +234,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -294,11 +294,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -319,11 +319,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -344,11 +344,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -369,11 +369,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -410,11 +410,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -435,11 +435,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -460,11 +460,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
@@ -485,11 +485,11 @@
                 </div>
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
-              <a href="#" class="btn">В корзину</a>
+              <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
             <div class="product-card__footer-bottom uk-flex uk-flex-middle uk-flex-between">
               <a href="#">Подробнее</a>
-              <span>Купить в 1 клик</span>
+              <span data-uk-toggle="target: #popupOneClick">Купить в 1 клик</span>
             </div>
           </div>
         </div>
