feature: adds pars styles for mobile version product page

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body>
-  //= components/header.html
+  <!-- //= components/header.html -->
 
   <!-- Slider top -->
   <div class="main-banner uk-container bg-full-width--gradient">
