feature: mob version

--- a/src/product.html
+++ b/src/product.html
@@ -239,11 +239,11 @@
 
   <div class="product__faq uk-container bg-full-width">
     <ul class="frame" uk-accordion>
-      <li>
+      <li class="uk-open">
         <h2 class="uk-accordion-title product__faq-title">Часто задаваемые вопросы</h2>
 
         <div class="uk-accordion-content uk-flex">
-          <ul class="accordion" uk-accordion="collapsible: true"
+          <ul class="accordion uk-width-expand@s" uk-accordion="collapsible: true"
             uk-switcher="animation: uk-animation-fade; active: 12;">
             <li>
               <a class="uk-accordion-title" href="#">Телефоны новые или восстановленные?</a>
@@ -666,7 +666,7 @@
         <div class="uk-accordion-content">
           <div class="reviews__content uk-flex uk-flex-column@s">
             <!-- left-section -->
-            <div class="uk-width-expand@l uk-margin-right">
+            <div class="uk-width-expand@l uk-margin-right@l uk-margin-medium-bottom@s">
               <h2 class="title title--medium">Отзывы</h2>
               <ul class="uk-flex uk-flex-column uk-margin-bottom uk-padding-left@s uk-padding-right@s">
                 <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
@@ -778,7 +778,7 @@
     </ul>
   </div>
 
-  //= components/question.html
+  //= components/subscribe.html
   //= components/footer.html
 </body>
 //= components/bottom.html
